DigicielFull/force-app/main/default/objects/amc__Role_Actual__c/fields/amc__Exclude_from_Billable_Capacity__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Billable_Capacity__c</fullName>
    <formula>amc__Time_Log__r.amc__Exclude_from_Billable_Capacity_Indicator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Identifies if the Time Log this Role Actual record relates to was marked as Exclude from Billable Capacity</inlineHelpText>
    <label>Exclude from Billable Capacity</label>
    <type>Checkbox</type>
</CustomField>