DigicielFull/force-app/main/default/objects/amc__Role_Actual__c/fields/amc__Hours_Completed_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Completed_Billable__c</fullName>
    <inlineHelpText>Identifies the number of Billable Hours completed from the record this Role Actual relates to (e.g. Time Log or Holiday)</inlineHelpText>
    <label>Hours Completed - Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>