DigicielFull/force-app/main/default/objects/amc__Role_Actual__c/fields/amc__Hours_Completed_Value_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Completed_Value_Billable__c</fullName>
    <inlineHelpText>Identifies the completed billable value of this Role Actual by multiplying the Hours Completed - Billable with the appropriate Billable Hourly Rate</inlineHelpText>
    <label>Hours Completed Value (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>