DigicielFull/force-app/main/default/objects/amc__Role_Actual__c/fields/amc__Role_Allocation__c.field-meta.xml
<CustomField>
    <fullName>amc__Role_Allocation__c</fullName>
    <inlineHelpText>Links to the Role Allocation record this Role Actual relates to</inlineHelpText>
    <label>Role Allocation</label>
    <referenceTo>amc__Role_Allocation__c</referenceTo>
    <relationshipLabel>Role Actuals</relationshipLabel>
    <relationshipName>Role_Actuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>